Update the author's romanized name

--- a/src/main/net/lemonfactory/sudokusolver/gui/lang/messages.properties
+++ b/src/main/net/lemonfactory/sudokusolver/gui/lang/messages.properties
@@ -63,7 +63,7 @@ Space characters will be ignored.<br>\
 &nbsp;</html>
 MSG_COPY   =The puzzle has been copied to the clipboard.
 MSG_ABOUT  =<html>Sudoku Solver<br><br>\
-Author: Chungmin Lee<br>\
+Author: Choongmin Lee<br>\
 Version: 0.7.2 (July 9, 2009)<br>\
 Homepage: <a href="https://github.com/clee704/sudokusolver">https://github.com/clee704/sudokusolver</a><br>\
 &nbsp;</html>
